objects/Opportunity_Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Uniquekey_For_The_Forecast__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Uniquekey For The Forecast</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Won_Date__c</fullName>
        <description>This field shows the Won Date of the related Oppy Part.</description>
        <formula>Part__r.Won_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won Date</label>
        <type>Date</type>
    </fields>
    <label>Opportunity Forecast</label>
    <nameField>
        <displayFormat>FC-{000000000}</displayFormat>
        <label>Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Forecasts</pluralLabel>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Part</fullName>
        <active>true</active>
        <label>Part</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Past_forecast_not_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.Admin_Profile_Exception__c.Skip_Opportuntiy_Validation__c), 
CONTAINS(Opportunity__r.RecordType.DeveloperName,&apos;DND_Opportunity&apos;), 
Value(Fiscal_Year__c) &lt; YEAR(TODAY()) ,
Quantity__c &gt; 0)</errorConditionFormula>
        <errorMessage>Past Forecast are not allowed. Please move Forecast in Future.</errorMessage>
    </validationRules>
</CustomObject>